--- a/partner_avatar/static/description/index.html
+++ b/partner_avatar/static/description/index.html
@@ -3,7 +3,7 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Auto generate partner's images from initials</h2>
         <h3 class="oe_slogan">This is simple</h3>
         <div class="oe_demo oe_picture oe_screenshot">
-            <img src="partner_avatar_scr1.png">
+            <img src="images/partner_avatar_scr1.png">
         </div>
     </div>
 </section>
@@ -12,15 +12,22 @@
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">No configuration</h2>
         <h3 class="oe_slogan">Works like a charm</h3>
-        <h3 class="oe_slogan">You can configure template and colors in system parameters</h3>
+        <h3 class="oe_slogan">You can configure the template and colors in system parameters</h3>
+        <h3 class="oe_slogan">First column is for backgound color, second one is for letters color</h3>
         <div class="oe_demo oe_picture oe_screenshot">
-            <img src="partner_avatar_scr2.png">
+            <img src="images/partner_avatar_scr5.png">
+        </div>
+        <h3 class="oe_slogan">You simply create a new partner with name and the image is generated</h3>
+        <h3 class="oe_slogan">It updates the image, when you change partner's name</h3>
+        <h3 class="oe_slogan">That's how it looks</h3>
+        <div class="oe_demo oe_picture oe_screenshot">
+            <img src="images/partner_avatar_scr2.png">
         </div>
         <div class="oe_demo oe_picture oe_screenshot">
-            <img src="partner_avatar_scr3.png">
+            <img src="images/partner_avatar_scr3.png">
         </div>
         <div class="oe_demo oe_picture oe_screenshot">
-            <img src="partner_avatar_scr4.png">
+            <img src="images/partner_avatar_scr4.png">
         </div>
     </div>
 </section>
