--- a/partner_avatar/static/description/index.html
+++ b/partner_avatar/static/description/index.html
@@ -1,33 +1,22 @@
-<section class="oe_container">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Auto generate partner's images from initials</h2>
-        <h3 class="oe_slogan">This is simple</h3>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <img src="images/partner_avatar_scr1.png">
-        </div>
+<div class="container" style="font-weight: 600 !important; font-size: 1rem !important;">
+    <div class="col-sm-12">
+        <img src="images/banner.png" class="img-fluid w-100" />
+        <h2 class="oe_slogan" style="color:#875A7B;">Partner Avatar</h2>
+        <p>Auto generate partner's images from initials. This is simple!</p>
+        <br/>
+        <img src="images/screenshot1.png" class="img-fluid w-100" />
+        <br/>
+        <p>No configuration. Works like a charm. You can configure the template and colors in system parameters. First column is for background color, second one is for letters color</p>
+        <br/>
+        <img src="images/screenshot5.png" class="img-fluid w-100" />
+        <br/>
+        <p>You simply create a new partner with name and the image is generated. It updates the image, when you change partner's name. </p>
+        <h2 class="oe_slogan" style="color:#875A7B;">Screenshots</h2>
+        <p>Screenshot 2</p>
+        <img src="images/screenshot2.png" class="img-fluid w-100" />
+        <p>Screenshot 3</p>
+        <img src="images/screenshot4.png" class="img-fluid w-100" />
+        <p>Screenshot 4</p>
+        <img src="images/screenshot4.png" class="img-fluid w-100" />
     </div>
-</section>
-
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">No configuration</h2>
-        <h3 class="oe_slogan">Works like a charm</h3>
-        <h3 class="oe_slogan">You can configure the template and colors in system parameters</h3>
-        <h3 class="oe_slogan">First column is for backgound color, second one is for letters color</h3>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <img src="images/partner_avatar_scr5.png">
-        </div>
-        <h3 class="oe_slogan">You simply create a new partner with name and the image is generated</h3>
-        <h3 class="oe_slogan">It updates the image, when you change partner's name</h3>
-        <h3 class="oe_slogan">That's how it looks</h3>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <img src="images/partner_avatar_scr2.png">
-        </div>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <img src="images/partner_avatar_scr3.png">
-        </div>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <img src="images/partner_avatar_scr4.png">
-        </div>
-    </div>
-</section>
+</div>
