--- a/odoo_tests_selenium/static/description/index.html
+++ b/odoo_tests_selenium/static/description/index.html
@@ -25,6 +25,9 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Details</h2>
         <p>odoo_tests module checks selected tests. If test inherits HttpCase a new odoo instance with shared cursor will be started. If test inherits SeleniumHttpCase a new browser will be shown. Thanks to it user can test controllers. You can find example in <b>tests/test_selenium_example.py</b>. In this example a new user is created, browser is opened and there logging is is processed. This is a test so all data will be <b>rollbacked!</b></p>
         <br/>
+        <a href="https://www.youtube.com/channel/UCf5TCwpMFTfA7g76Pk7SxwA">Check out my youtube channel to learn more!</a>
+        <br/>
+        <br/>
         <p>In case of any questions don't hesitate to email me: <b>tadeusz.karpinski@gmail.com</b></p>
         <h2 class="oe_slogan" style="color:#875A7B;">Screenshots</h2>
         <p>Screenshot 1</p>
