--- a/odoo_tests_selenium_test_mode/static/description/index.html
+++ b/odoo_tests_selenium_test_mode/static/description/index.html
@@ -25,6 +25,9 @@
         <p>All database changes are rollbacked. Previous user's name is restored</b></p>
         <img src="images/screenshot5.png" class="img-fluid w-100" />
         <br/>
+        <a href="https://www.youtube.com/channel/UCf5TCwpMFTfA7g76Pk7SxwA">Check out my youtube channel to learn more!</a>
+        <br/>
+        <br/>
         <p>In case of any questions don't hesitate to email me: <b>tadeusz.karpinski@gmail.com</b></p>
     </div>
 </div>
