--- a/odoo_update/static/description/index.html
+++ b/odoo_update/static/description/index.html
@@ -28,6 +28,9 @@
         <p>By default user must confirm uninstallation. Confirmation can be skipped</p>
         <pre style="background-color: #f5f5f5">python odoo-bin uninstall --modules=crm,sale --force</pre>
         <br/>
+        <a href="https://www.youtube.com/channel/UCf5TCwpMFTfA7g76Pk7SxwA">Check out my youtube channel to learn more!</a>
+        <br/>
+        <br/>
         <p>In case of any questions don't hesitate to email me: <b>tadeusz.karpinski@gmail.com</b></p>
         <h2 class="oe_slogan" style="color:#875A7B;">Screenshots</h2>
         <p>Screenshot 1</p>
