--- a/context_watcher/static/description/index.html
+++ b/context_watcher/static/description/index.html
@@ -4,7 +4,7 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Context Watcher</h2>
         <p>With this module developer can use context.get in view domains and pass context from models to views.</p>
         <h2 class="oe_slogan" style="color:#875A7B;">Examples</h2>
-        <p>In this dummy example name field of partner will be hidden when the name is "Hide Me! In general with this module developer can remove all dummy computed fields."</p>
+        <p>In this dummy example name field of partner will be hidden when the name is "Hide Me!" In general with this module developer can remove all dummy computed fields.</p>
         <p><b>partner.py</b></p>
         <pre style="background-color: #f5f5f5">
 from odoo import models, api
