--- a/odoo_tests/static/description/index.html
+++ b/odoo_tests/static/description/index.html
@@ -6,6 +6,8 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Examples</h2>
         <p>Run one test</p>
         <pre style="background-color: #f5f5f5">python odoo-bin test --test-name=test_odoo_tests_example_login</pre>
+        <p>Print report and save it</p>
+        <pre style="background-color: #f5f5f5">python odoo-bin test --test-name=test_odoo_tests_example_report_download --test-download=/home/odoo/odoo-atingo</pre>
         <p>Run all tests from test class</p>
         <pre style="background-color: #f5f5f5">python odoo-bin test --test-class=TestOdooTestsExample</pre> 
         <p>Run all tests from module</p>
